will fix minor ui spacing

--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -1,180 +1,177 @@
-
 .header {
-    width: 100%;
-    position: fixed;
-    top: 0;
-    left: 0;
-    background-color: rgba(white, 0.9);
-    z-index: 1;
+	width: 100%;
+	position: fixed;
+	top: 0;
+	left: 0;
+	background-color: rgba(white, 0.9);
+	z-index: 1;
 }
 
-.nav-list{
-    margin-right: 60px;
+.nav-list {
+	margin-right: 60px;
 }
 
-
-.nav-toggle, .nav-close{
-    display: none;
+.nav-toggle,
+.nav-close {
+	display: none;
 }
 
 nav {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
 }
 
-.nav-logo{
-    
-    margin-left: 90px;
-    text-decoration: none;
-    color: black;
-    font-size: 20px;
+.nav-logo {
+	margin-left: 90px;
+	text-decoration: none;
+	color: black;
+	font-size: 20px;
+	padding: 8px 10px 8px 10px;
 }
-.nav-link .nav-icon{
-    margin-right: 8px;
+.nav-link .nav-icon {
+	margin-right: 8px;
 }
 .nav-link {
-    text-decoration: none;
-    color: black;
-    font-size: 18px;
+	text-decoration: none;
+	color: black;
+	font-size: 18px;
+	padding: 8px 10px 8px 10px;
 }
 
-nav a:hover{
-    color: white;
-    transition: 0.6s;
-    font-size: 15.5px;
-    background-color: rgba(black, 0.8);
-    padding: 6px;
-    border-radius: 0.5rem;
+nav a:hover {
+	color: white;
+	transition: 0.6s;
+	background-color: rgba(black, 0.8);
+	border-radius: 0.5rem;
 }
 
-ul{
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
+ul {
+	display: flex;
+	flex-direction: row;
+	justify-content: flex-end;
 }
 
-li{
-    list-style: none;
-    margin: 20px;
+li {
+	list-style: none;
+	margin: 20px;
 }
 
-.icons-container{
-    display: flex;
-    flex-direction: column;
-    position: relative;
-    margin-top: 80px;
-    align-items: center;
-    i{
-        color: rgba(57 57 57);
-    }
-    i:hover {
-       color: black;
-       zoom: 103%;
-    }
+.icons-container {
+	display: flex;
+	flex-direction: column;
+	position: relative;
+	margin-top: 150px;
+	align-items: center;
+	i {
+		color: rgba(57 57 57);
+	}
+	i:hover {
+		color: black;
+		zoom: 101%;
+	}
 }
 
 .button {
-    background-color: rgba(black, 0.8);
-    color: white;
-    text-decoration: none;
-    padding: 15px;
-    border-radius: 0.6rem;
+	background-color: rgba(black, 0.8);
+	color: white;
+	text-decoration: none;
+	padding: 15px;
+	border-radius: 0.6rem;
 }
 
 .button:hover {
-box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+	box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
 /*============BREAKPOINTS============*/
 
-@media screen and (max-width: 900px){
+@media screen and (max-width: 900px) {
+	nav {
+		margin: none;
+		display: flex;
+		flex-direction: column;
+		padding-top: 30px;
+		align-items: center;
+	}
 
-  nav{
-        margin: none;
-        display: flex;
-        flex-direction: column;
-        padding-top: 30px;
-        align-items: center;
-    }
+	li {
+		padding: none;
+	}
+	.nav-link {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+	}
+	.nav-menu {
+		position: fixed;
+		bottom: 0;
+		left: 0;
+		width: 100%;
+		box-shadow: 0px -1px 4px rgba(0, 0, 0, 0.15);
+		border-radius: 1.5rem 1.5rem 0 0;
+		transition: 0.3s;
+		margin: none;
+		background-color: white;
+	}
+	.nav-list {
+		margin: none;
+		display: grid;
+		grid-template-columns: repeat(3, 1fr);
+	}
+	.nav-icon {
+		font-size: 1.2rem;
+	}
+	.nav-icon,
+	.nav-close,
+	.nav-toggle {
+		display: block;
+	}
 
-    li{
-        padding: none;
-    }
-    .nav-link{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
-    .nav-menu{
-        position: fixed;
-        bottom: 0;
-        left: 0;
-        width: 100%;
-        box-shadow: 0px -1px 4px rgba(0, 0, 0, 0.15);
-        border-radius: 1.5rem 1.5rem 0 0;
-        transition: 0.3s;
-        margin: none;
-        background-color: white;
-    }
-    .nav-list{
-       margin: none;
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
-    }
-    .nav-icon{
-        font-size: 1.2rem;
-    }
-    .nav-icon, .nav-close, .nav-toggle{
-        display: block;
-    }
+	.hide-menu {
+		display: none;
+		transition: ease-in-out 1s;
+	}
 
-    .hide-menu{
-        display: none;
-        transition: ease-in-out 1s;
-    }
+	.nav-logo {
+		margin-left: 0px;
+	}
 
-    .nav-logo{
-        margin-left: 0px;
-    }
-    
-    .nav-toggle{
-        margin: 10px;
-        zoom: 110%;
-    }
-    .nav-toggle:hover{
-        zoom: 112%;
-    }
+	.nav-toggle {
+		margin: 10px;
+		zoom: 110%;
+	}
+	.nav-toggle:hover {
+		zoom: 112%;
+	}
 
-    .nav-close{
-        position: absolute;
-        right: 1.3rem;
-        bottom: .5rem;
-        font-size: 1.5rem;
-        cursor: pointer;
-    }
+	.nav-close {
+		position: absolute;
+		right: 1.3rem;
+		bottom: 0.5rem;
+		font-size: 1.5rem;
+		cursor: pointer;
+	}
 }
 
+@media screen and (max-width: 350px) {
+	.header {
+		.home-social-icon i.uil {
+			margin-right: 0;
+		}
+	}
 
-@media screen and (max-width: 350px){
+	.nav-list {
+		margin-right: 0;
+		padding-inline-start: 0;
+		.nav-icon {
+			margin-right: 0;
+		}
+	}
 
-    .header {
-       .home-social-icon i.uil {
-            margin-right: 0;
-        }
-    }
-
-    .nav-list{
-        margin-right: 0;
-        padding-inline-start: 0;
-        .nav-icon{
-            margin-right: 0;
-        }
-    }
-
-    .home-data p{
-        display: block;
-        align-items: center;
-        width: 100%;
-    }
+	.home-data p {
+		display: block;
+		align-items: center;
+		width: 100%;
+	}
 }
