--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -167,7 +167,6 @@ p {
 	// color: white;
 	color: white;
 	transition: 0.6s;
-	font-size: 15.5px;
 	background-color: rgba(black, 0.8);
 	padding: 0.25rem 0.75rem;
 	border-radius: 0.5rem;
